# doc-serve-skill

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  Taskfile.yml
.claude/: CLAUDE.md  settings.local.json
.claude-plugin/: marketplace.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
agent-brain-cli/: README.md  Taskfile.yml  coverage-cli.xml  pyproject.toml
agent-brain-plugin/: README.md
agent-brain-server/: .coverage.MacBook-Pro-3.local.68098.XkOLdfKx  .env.example  README.md  Taskfile.yml  config.yaml.example  coverage-server.xml  pyproject.toml
doc-serve-server/: .coverage.Mac.lan.74973.XIlTpuBx  .coverage.MacBook-Pro-3.local.82561.XSRdIntx  .env.example  README.md  Taskfile.yml  coverage-server.xml  pyproject.toml
doc-serve-server/bm25_index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
doc-serve-server/doc_serve_server/: __init__.py
doc-serve-server/doc_serve_server/api/: main.py
doc-serve-server/doc_serve_server/api/routers/: health.py  index.py  query.py
doc-serve-server/doc_serve_server/config/: settings.py
doc-serve-server/doc_serve_server/indexing/: __init__.py  bm25_index.py  chunking.py  document_loader.py  embedding.py
doc-serve-server/doc_serve_server/models/: __init__.py  health.py  index.py  query.py
doc-serve-server/doc_serve_server/services/: indexing_service.py  query_service.py
doc-serve-server/doc_serve_server/storage/: vector_store.py
doc-serve-server/src/indexing/: __init__.py
doc-serve-server/test_persist/: data.csc.index.npy
doc-serve-server/tests/: conftest.py  test_server_install.py
doc-serve-server/tests/integration/: test_alpha_weighting.py  test_api.py  test_bm25_api.py  test_hybrid_api.py  test_unified_search.py
doc-serve-server/tests/unit/: test_bm25_retrieval.py  test_chunking.py  test_document_loader.py  test_hybrid_fusion.py  test_locking.py  test_models.py  test_project_root.py  test_runtime.py  test_storage_paths.py
doc-svr-ctl/: README.md  Taskfile.yml  coverage-cli.xml  pyproject.toml
doc-svr-ctl/doc_svr_ctl/: cli.py
doc-svr-ctl/doc_svr_ctl/client/: api_client.py
doc-svr-ctl/doc_svr_ctl/commands/: __init__.py  index.py  query.py
doc-svr-ctl/src/: __init__.py  cli.py
doc-svr-ctl/src/client/: __init__.py  api_client.py
doc-svr-ctl/src/commands/: __init__.py  index.py  query.py  reset.py  status.py
doc-svr-ctl/tests/: test_cli.py  test_cli_install.py  test_cli_query_modes.py  test_client.py  test_multi_instance_commands.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  (+12 more)
(+406 files in other folders)
