[tool.poetry]
name = "doc-svr-ctl"
version = "1.0.0"
description = "Command-line interface for managing Doc-Serve server"
authors = ["Spillwave Team"]
readme = "README.md"
packages = [{include = "doc_svr_ctl"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
httpx = "^0.28.0"
rich = "^13.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
doc-svr-ctl = "doc_svr_ctl.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
